website/versioned_docs/version-0.4.0/reference/store/postgres.md
<!-- Code generated by gomarkdoc. DO NOT EDIT -->

# postgres

```go
import "github.com/Bugs5382/go-saga-orchestration/store/postgres"
```

Package postgres is the production Store implementation. It uses pgx for connection pooling and golang\-migrate to apply schema migrations. Both cmd/api and cmd/engine call postgres.Migrate\(dsn\) immediately after postgres.Open succeeds to apply any pending migrations at boot.

## func Migrate

```go
func Migrate(dsn string) error
```

Migrate applies every up\-migration in store/postgres/migrations that has not yet been recorded in the schema\_migrations table. Safe to call on every boot — no\-ops if the schema is already at Head.

The migrations are embedded in the binary at build time so deploys do not need a sidecar migration job or an out\-of\-band run. cmd/api and cmd/engine each call this immediately after postgres.Open succeeds.

DSN must use the pgx5 form, e.g. "postgres://user:pass@host:5432/db?sslmode=disable".

<a name="Store"></a>
## type Store

Store wraps a pgxpool.Pool and implements store.Store.

```go
type Store struct {
    // contains filtered or unexported fields
}
```

<a name="Open"></a>
### func Open

```go
func Open(ctx context.Context, dsn string) (*Store, error)
```

Open dials Postgres using the supplied DSN. Caller MUST defer Close\(\).

<a name="Store.AppendEvent"></a>
### func \(\*Store\) AppendEvent

```go
func (s *Store) AppendEvent(ctx context.Context, evt domain.SagaRunEvent) error
```

AppendEvent inserts the audit event, ignoring duplicates on \(run\_id, step\_id, attempt, event\_type\).

<a name="Store.AppendSignal"></a>
### func \(\*Store\) AppendSignal

```go
func (s *Store) AppendSignal(ctx context.Context, sig domain.SagaSignal) error
```

AppendSignal inserts a received signal row for the run.

<a name="Store.Cancel"></a>
### func \(\*Store\) Cancel

```go
func (s *Store) Cancel(ctx context.Context, runID uuid.UUID, reason string) error
```

Cancel terminates an in\-flight run: terminal cancelled \+ terminal\_at, reason in last\_error, open user tasks closed, await markers / wakeup cleared — all in one transaction. Idempotent: when the run is already terminal the guard updates no row, so user tasks are untouched and no event is emitted. See issue \#80.

<a name="Store.ClaimCronFire"></a>
### func \(\*Store\) ClaimCronFire

```go
func (s *Store) ClaimCronFire(ctx context.Context, id uuid.UUID, expectedNextFire, newNextFire time.Time) (bool, error)
```

ClaimCronFire atomically advances next\_fire\_at from expectedNextFire to newNextFire and stamps last\_fired\_at=now\(\). Returns true iff this caller won the compare\-and\-swap \(false means another pod already claimed this fire\).

<a name="Store.ClearPause"></a>
### func \(\*Store\) ClearPause

```go
func (s *Store) ClearPause(ctx context.Context, runID uuid.UUID) error
```

ClearPause returns the run to the running state and clears all wakeup and await markers.

<a name="Store.Close"></a>
### func \(\*Store\) Close

```go
func (s *Store) Close()
```

Close releases the pool. Safe to call once.

<a name="Store.CompleteAction"></a>
### func \(\*Store\) CompleteAction

```go
func (s *Store) CompleteAction(ctx context.Context, runID uuid.UUID, attempt int, result map[string]any) error
```

CompleteAction clears the await marker, merges result into variables, and sets wakeup\_at=now\(\) so the Advance paused\-handling loop resumes the saga. If attempt does not match current\_attempt the row is unchanged \(late delivery\).

<a name="Store.CountRuns"></a>
### func \(\*Store\) CountRuns

```go
func (s *Store) CountRuns(ctx context.Context, filter store.RunFilter) (int, error)
```

CountRuns returns the total count of runs matching filter \(ignoring Limit/Offset\).

<a name="Store.CreateRun"></a>
### func \(\*Store\) CreateRun

```go
func (s *Store) CreateRun(ctx context.Context, run domain.SagaRun) error
```

CreateRun inserts a new saga run row.

<a name="Store.CreateUserTask"></a>
### func \(\*Store\) CreateUserTask

```go
func (s *Store) CreateUserTask(ctx context.Context, task domain.UserTask) error
```

CreateUserTask inserts a new user task row into runtime.saga\_user\_tasks.

<a name="Store.DeleteTrigger"></a>
### func \(\*Store\) DeleteTrigger

```go
func (s *Store) DeleteTrigger(ctx context.Context, id uuid.UUID) error
```

DeleteTrigger removes the trigger by id. Returns ErrNotFound if absent.

<a name="Store.FailAction"></a>
### func \(\*Store\) FailAction

```go
func (s *Store) FailAction(ctx context.Context, runID uuid.UUID, attempt int, code, message string, retryable bool) error
```

FailAction transitions the run to failed and appends an audit event. If attempt does not match current\_attempt the call is a no\-op \(late delivery\).

<a name="Store.FindRunsByAwaitedEvent"></a>
### func \(\*Store\) FindRunsByAwaitedEvent

```go
func (s *Store) FindRunsByAwaitedEvent(ctx context.Context, topic string) ([]domain.SagaRun, error)
```

FindRunsByAwaitedEvent returns paused runs awaiting an event on topic.

<a name="Store.FindRunsByDueWakeup"></a>
### func \(\*Store\) FindRunsByDueWakeup

```go
func (s *Store) FindRunsByDueWakeup(ctx context.Context, now time.Time, limit int) ([]uuid.UUID, error)
```

FindRunsByDueWakeup returns up to limit IDs of paused runs whose wakeup\_at is at or before now, ordered by wakeup\_at.

<a name="Store.GetAction"></a>
### func \(\*Store\) GetAction

```go
func (s *Store) GetAction(ctx context.Context, service, name string, version int) (domain.ActionRegistration, error)
```

GetAction returns the action registration for the given service/name/version.

<a name="Store.GetEventByID"></a>
### func \(\*Store\) GetEventByID

```go
func (s *Store) GetEventByID(ctx context.Context, id uuid.UUID) (domain.SagaRunEvent, error)
```

GetEventByID returns a single audit event by its UUID, or ErrNotFound.

<a name="Store.GetPublishedRuleByID"></a>
### func \(\*Store\) GetPublishedRuleByID

```go
func (s *Store) GetPublishedRuleByID(ctx context.Context, ruleID string, tenantID *uuid.UUID) (domain.RuleDefinition, error)
```

GetPublishedRuleByID returns the most recent published version of a rule.

<a name="Store.GetPublishedWorkflowByID"></a>
### func \(\*Store\) GetPublishedWorkflowByID

```go
func (s *Store) GetPublishedWorkflowByID(ctx context.Context, workflowID string, tenantID *uuid.UUID) (domain.WorkflowDefinition, error)
```

GetPublishedWorkflowByID returns the highest\-version published definition for workflowID scoped to tenantID \(nil = platform\), or ErrNotFound.

<a name="Store.GetRun"></a>
### func \(\*Store\) GetRun

```go
func (s *Store) GetRun(ctx context.Context, id uuid.UUID) (domain.SagaRun, error)
```

GetRun loads the run with the given ID, or returns ErrNotFound.

<a name="Store.GetTrigger"></a>
### func \(\*Store\) GetTrigger

```go
func (s *Store) GetTrigger(ctx context.Context, id uuid.UUID) (domain.SagaTrigger, error)
```

GetTrigger returns the SagaTrigger for id, or ErrNotFound.

<a name="Store.GetUserTask"></a>
### func \(\*Store\) GetUserTask

```go
func (s *Store) GetUserTask(ctx context.Context, taskID uuid.UUID) (domain.UserTask, error)
```

GetUserTask returns the user task by ID, or ErrNotFound.

<a name="Store.GetWorkflowDefinition"></a>
### func \(\*Store\) GetWorkflowDefinition

```go
func (s *Store) GetWorkflowDefinition(ctx context.Context, id uuid.UUID) (domain.WorkflowDefinition, error)
```

GetWorkflowDefinition returns the definition with the given storage ID, or ErrNotFound.

<a name="Store.ListActions"></a>
### func \(\*Store\) ListActions

```go
func (s *Store) ListActions(ctx context.Context, filter store.ActionFilter) ([]domain.ActionRegistration, error)
```

ListActions returns all action registrations matching the optional filter.

<a name="Store.ListChildrenByParent"></a>
### func \(\*Store\) ListChildrenByParent

```go
func (s *Store) ListChildrenByParent(ctx context.Context, parentID uuid.UUID, parentStepID string) ([]domain.SagaRun, error)
```

ListChildrenByParent returns all runs with parent\_run\_id=$1 AND parent\_step\_id=$2.

<a name="Store.ListDueCronTriggers"></a>
### func \(\*Store\) ListDueCronTriggers

```go
func (s *Store) ListDueCronTriggers(ctx context.Context, now time.Time, limit int) ([]domain.SagaTrigger, error)
```

ListDueCronTriggers returns enabled cron triggers whose next\_fire\_at is at or before now, ordered oldest\-first, capped at limit.

<a name="Store.ListEventsByRun"></a>
### func \(\*Store\) ListEventsByRun

```go
func (s *Store) ListEventsByRun(ctx context.Context, runID uuid.UUID) ([]domain.SagaRunEvent, error)
```

ListEventsByRun returns the events recorded for runID ordered by recorded\_at.

<a name="Store.ListRuns"></a>
### func \(\*Store\) ListRuns

```go
func (s *Store) ListRuns(ctx context.Context, filter store.RunFilter) ([]domain.SagaRun, error)
```

ListRuns returns saga runs matching filter, sorted by started\_at DESC. For TriggerType filtering a LEFT JOIN on saga\_triggers is added. Limit defaults to 50 when 0; hard max of 500 is enforced by the handler before this is called.

<a name="Store.ListTriggers"></a>
### func \(\*Store\) ListTriggers

```go
func (s *Store) ListTriggers(ctx context.Context, filter store.TriggerFilter) ([]domain.SagaTrigger, error)
```

ListTriggers returns triggers matching the optional filter.

<a name="Store.ListUserTasksByRun"></a>
### func \(\*Store\) ListUserTasksByRun

```go
func (s *Store) ListUserTasksByRun(ctx context.Context, runID uuid.UUID) ([]domain.UserTask, error)
```

ListUserTasksByRun returns all user tasks for a given run, ordered by creation time \(id order is used as a stable proxy since saga\_user\_tasks has no separate created\_at column beyond the implicit id ordering\).

<a name="Store.MarkAwaitingAction"></a>
### func \(\*Store\) MarkAwaitingAction

```go
func (s *Store) MarkAwaitingAction(ctx context.Context, runID uuid.UUID, dispatch string, attempt int) error
```

MarkAwaitingAction sets state=paused, awaited\_action\_dispatch, and current\_attempt for the given run. Idempotent on \(runID, attempt, dispatch\).

<a name="Store.MarkRunFailed"></a>
### func \(\*Store\) MarkRunFailed

```go
func (s *Store) MarkRunFailed(ctx context.Context, runID uuid.UUID, currentStep, lastError string) error
```

MarkRunFailed transitions a run to terminal failed, stamps terminal\_at, and persists lastError on the run. Idempotent: the terminal guard means an already\-terminal run is left untouched. See issue \#80.

<a name="Store.Pool"></a>
### func \(\*Store\) Pool

```go
func (s *Store) Pool() *pgxpool.Pool
```

Pool exposes the underlying pgxpool for migrations \+ tests.

<a name="Store.PopTryCatch"></a>
### func \(\*Store\) PopTryCatch

```go
func (s *Store) PopTryCatch(ctx context.Context, runID uuid.UUID) (domain.TryCatchFrame, bool, error)
```

PopTryCatch removes and returns the top TryCatchFrame atomically. Returns \(zero, false, nil\) if the stack is empty.

<a name="Store.PushTryCatch"></a>
### func \(\*Store\) PushTryCatch

```go
func (s *Store) PushTryCatch(ctx context.Context, runID uuid.UUID, frame domain.TryCatchFrame) error
```

PushTryCatch reads the try\_catch\_stack JSONB, appends frame \(enforcing max depth 3\), and writes it back within a transaction.

<a name="Store.RecordTriggerFire"></a>
### func \(\*Store\) RecordTriggerFire

```go
func (s *Store) RecordTriggerFire(ctx context.Context, triggerID uuid.UUID, workflowID string, runID *uuid.UUID, fireErr string) error
```

RecordTriggerFire inserts a row into runtime.saga\_trigger\_fires. Best\-effort: callers log errors but must not abort the triggering run on failure.

<a name="Store.SetPausedAwaitingEvent"></a>
### func \(\*Store\) SetPausedAwaitingEvent

```go
func (s *Store) SetPausedAwaitingEvent(ctx context.Context, runID uuid.UUID, topic string, headers map[string]string) error
```

SetPausedAwaitingEvent marks the run paused awaiting an event on topic with the given header filter.

<a name="Store.SetPausedAwaitingEventWithDeadline"></a>
### func \(\*Store\) SetPausedAwaitingEventWithDeadline

```go
func (s *Store) SetPausedAwaitingEventWithDeadline(ctx context.Context, runID uuid.UUID, topic string, headers map[string]string, deadline *time.Time) error
```

SetPausedAwaitingEventWithDeadline is SetPausedAwaitingEvent plus an optional wakeup deadline \(nil = wait indefinitely\). The deadline is stored as wakeup\_at so the timer dispatcher wakes the run if no matching event arrives in time.

<a name="Store.SetPausedAwaitingSignal"></a>
### func \(\*Store\) SetPausedAwaitingSignal

```go
func (s *Store) SetPausedAwaitingSignal(ctx context.Context, runID uuid.UUID, signalName string, deadline *time.Time) error
```

SetPausedAwaitingSignal marks the run paused awaiting signalName, with an optional wakeup deadline.

<a name="Store.SetPausedWithWakeup"></a>
### func \(\*Store\) SetPausedWithWakeup

```go
func (s *Store) SetPausedWithWakeup(ctx context.Context, runID uuid.UUID, wakeupAt time.Time) error
```

SetPausedWithWakeup marks the run paused and records wakeup\_at.

<a name="Store.SpawnChildRun"></a>
### func \(\*Store\) SpawnChildRun

```go
func (s *Store) SpawnChildRun(ctx context.Context, parentID uuid.UUID, parentStepID, branchKey string, def domain.WorkflowDefinition, inputs map[string]any) (uuid.UUID, error)
```

SpawnChildRun looks up the definition\_id for def, constructs a child SagaRun with the parent fields set, and inserts it via CreateRun. The child begins at the definition's default Start step.

<a name="Store.SpawnChildRunAt"></a>
### func \(\*Store\) SpawnChildRunAt

```go
func (s *Store) SpawnChildRunAt(ctx context.Context, parentID uuid.UUID, parentStepID, branchKey string, def domain.WorkflowDefinition, inputs map[string]any, startStep string) (uuid.UUID, error)
```

SpawnChildRunAt looks up the definition\_id for def, constructs a child SagaRun with the parent fields set, overrides CurrentStep with startStep when non\-empty, and inserts it via CreateRun.

<a name="Store.StatsForWorkflow"></a>
### func \(\*Store\) StatsForWorkflow

```go
func (s *Store) StatsForWorkflow(ctx context.Context, workflowID string) (store.WorkflowStats, error)
```

StatsForWorkflow computes aggregate metrics for a single workflow using two aggregate queries: one for success\_rate\_24h \+ last\_run\_at, one for in\_flight.

<a name="Store.SubmitUserTask"></a>
### func \(\*Store\) SubmitUserTask

```go
func (s *Store) SubmitUserTask(ctx context.Context, taskID uuid.UUID, submittedBy string, result map[string]any) error
```

SubmitUserTask marks the task submitted with the given actor and result. Idempotent: re\-submitting overwrites the previous submission fields. Returns ErrNotFound if the task does not exist.

<a name="Store.TryConsumeAwaitedSignal"></a>
### func \(\*Store\) TryConsumeAwaitedSignal

```go
func (s *Store) TryConsumeAwaitedSignal(ctx context.Context, runID uuid.UUID, signalName string) (bool, error)
```

TryConsumeAwaitedSignal atomically clears the await markers and marks matching unconsumed signal rows consumed when the run is paused awaiting signalName, reporting whether it did so.

<a name="Store.UpdateRunState"></a>
### func \(\*Store\) UpdateRunState

```go
func (s *Store) UpdateRunState(ctx context.Context, id uuid.UUID, state domain.RunState, currentStep string) error
```

UpdateRunState sets the run's state and current step, stamping terminal\_at when the new state is terminal.

<a name="Store.UpdateRunVariables"></a>
### func \(\*Store\) UpdateRunVariables

```go
func (s *Store) UpdateRunVariables(ctx context.Context, runID uuid.UUID, merge map[string]any) error
```

UpdateRunVariables merges merge into saga\_runs.variables using jsonb\_set per top\-level key. Dotted\-key writes are flattened into jsonb\_set path expressions; nested merges go through the JSONB operator '||' for shallow object combine, then jsonb\_set for the dotted writes.

<a name="Store.UpsertActionRegistration"></a>
### func \(\*Store\) UpsertActionRegistration

```go
func (s *Store) UpsertActionRegistration(ctx context.Context, reg domain.ActionRegistration) error
```

UpsertActionRegistration inserts or updates an action\_registry row keyed by \(service, action\_name, version\).

<a name="Store.UpsertRuleDefinition"></a>
### func \(\*Store\) UpsertRuleDefinition

```go
func (s *Store) UpsertRuleDefinition(ctx context.Context, def domain.RuleDefinition) (uuid.UUID, error)
```

UpsertRuleDefinition inserts \(or upserts on \(rule\_id, version\)\) a rule.

<a name="Store.UpsertTrigger"></a>
### func \(\*Store\) UpsertTrigger

```go
func (s *Store) UpsertTrigger(ctx context.Context, trigger domain.SagaTrigger) (uuid.UUID, error)
```

UpsertTrigger inserts or replaces a row in runtime.saga\_triggers keyed by id. If trigger.ID == uuid.Nil a new ID is generated. If the ID is set and a row already exists, all mutable columns are replaced \(upsert on conflict\).

<a name="Store.UpsertWorkflowDefinition"></a>
### func \(\*Store\) UpsertWorkflowDefinition

```go
func (s *Store) UpsertWorkflowDefinition(ctx context.Context, def domain.WorkflowDefinition) (uuid.UUID, error)
```

UpsertWorkflowDefinition inserts def, or updates the existing row on a \(workflow\_id, version\) conflict, returning the row's storage ID.

<a name="Store.WakeFromExternal"></a>
### func \(\*Store\) WakeFromExternal

```go
func (s *Store) WakeFromExternal(ctx context.Context, runID uuid.UUID) error
```

WakeFromExternal clears all await markers and wakeup\_at while leaving the run paused, so the Advance loop resumes it.

Generated by [gomarkdoc](<https://github.com/princjef/gomarkdoc>)
